AUTOATTN-482: Fix alignment (phone menu number and save button in AA builder)

--- a/app/modules/huron/features/autoAttendant/builder/_aa-builder.scss
+++ b/app/modules/huron/features/autoAttendant/builder/_aa-builder.scss
@@ -134,7 +134,7 @@ $aa-builder-text-color: $gray-dark-1;
 }
 
 #aa-header-row-save {
-  padding-right: 1rem;
+  padding-right: 2rem;
 }
 
 .aa-edit-icon {
